--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
 body {
-    color: rgb(187, 99, 114);
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+}
+#container {
+    width: 60%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+#container h1 {
+    font-size: 20px;
 }
