--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
-    color: red;
+    color: black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: gray;
 }
 
 #cabecera {
@@ -11,6 +12,11 @@ body {
     padding: 0.5em;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+}
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+    background-repeat: no-repeat;
 }
 #cabecera #tagline {
     padding: 0 0 0 1em;
@@ -26,4 +32,14 @@ body {
 }
 #container h1 {
     font-size: 20px;
+}
+#post {
+    background: white;
+    padding: 1em;
+}
+footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
